compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSAND
    BARRA
    CAPACITY
    COMENTARIO
    CONTAINS
    INSERT
    NEW
    PORCENTAJE
    PUSH
    REMOVE
    USIZE
    WHAT
    WITH_CAPACITY

Grammar

Rule 0     S' -> arranque
Rule 1     arranque -> instruccionGeneral
Rule 2     instruccionGeneral -> instruccionGeneral inicio
Rule 3     instruccionGeneral -> inicio
Rule 4     inicio -> fnMain
Rule 5     inicio -> funciones
Rule 6     inicio -> funcionesParametros
Rule 7     inicio -> instruccionStruct
Rule 8     fnMain -> FN MAIN PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 9     instrucciones -> instrucciones instruccion
Rule 10    instrucciones -> instruccion
Rule 11    instruccion -> imprimir
Rule 12    instruccion -> variable
Rule 13    instruccion -> asignacion
Rule 14    instruccion -> instruccionif
Rule 15    instruccion -> instruccionWhile
Rule 16    instruccion -> instruccionBreak
Rule 17    instruccion -> instruccionContinue
Rule 18    instruccion -> instruccionLoop
Rule 19    instruccion -> instruccionFor
Rule 20    instruccion -> funciones
Rule 21    instruccion -> llamadofuncion
Rule 22    instruccion -> funcionesParametros
Rule 23    instruccion -> instruccionReturn
Rule 24    instruccion -> instruccionStruct
Rule 25    instruccion -> alterValueStruct
Rule 26    instruccion -> alterValueArray
Rule 27    instruccion -> instruccionFor2
Rule 28    instruccionBreak -> BREAK PUNTOCOMA
Rule 29    instruccionContinue -> CONTINUE PUNTOCOMA
Rule 30    instruccionReturn -> RETURN exp PUNTOCOMA
Rule 31    funciones -> FN ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 32    funciones -> FN ID PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 33    funcionesParametros -> FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 34    funcionesParametros -> FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 35    parametros -> parametros COMA instruccionParametro
Rule 36    parametros -> instruccionParametro
Rule 37    instruccionParametro -> ID DOSPUNTOS tipo
Rule 38    llamadofuncion -> ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOCOMA
Rule 39    llamadofuncion -> ID PARENTESISIZQUIERDO parametrosllamado PARENTESISDERECHO PUNTOCOMA
Rule 40    parametrosllamado -> parametrosllamado COMA instruccionLlamado
Rule 41    parametrosllamado -> instruccionLlamado
Rule 42    instruccionLlamado -> exp
Rule 43    instruccionStruct -> STRUCT ID LLAVEIZQUIERDO listadoStruct LLAVEDERECHO
Rule 44    listadoStruct -> listadoStruct COMA elementoStruct
Rule 45    listadoStruct -> elementoStruct
Rule 46    elementoStruct -> ID DOSPUNTOS tipo
Rule 47    listadoBuild -> listadoBuild COMA elementoBuild
Rule 48    listadoBuild -> elementoBuild
Rule 49    elementoBuild -> ID DOSPUNTOS elementoStructBuild
Rule 50    elementoStructBuild -> exp
Rule 51    elementoStructBuild -> ID LLAVEIZQUIERDO listadoBuild LLAVEDERECHO
Rule 52    alterValueStruct -> ID PUNTO ID IGUAL exp PUNTOCOMA
Rule 53    imprimir -> PRINTLN NOT PARENTESISIZQUIERDO exp PARENTESISDERECHO PUNTOCOMA
Rule 54    imprimir -> PRINTLN NOT PARENTESISIZQUIERDO exp COMA listadoprint PARENTESISDERECHO PUNTOCOMA
Rule 55    listadoprint -> listadoprint COMA exp
Rule 56    listadoprint -> exp
Rule 57    imprimir -> PRINTLN NOT PARENTESISIZQUIERDO exp COMA ID PUNTO listaAcces PARENTESISDERECHO PUNTOCOMA
Rule 58    listaAcces -> listaAcces PUNTO elementoAcces
Rule 59    listaAcces -> elementoAcces
Rule 60    elementoAcces -> ID
Rule 61    variable -> LET MUT ID DOSPUNTOS tipo IGUAL exp PUNTOCOMA
Rule 62    variable -> LET MUT ID IGUAL exp PUNTOCOMA
Rule 63    variable -> LET MUT ID IGUAL ID LLAVEIZQUIERDO listadoBuild LLAVEDERECHO PUNTOCOMA
Rule 64    variable -> LET ID DOSPUNTOS tipo IGUAL exp PUNTOCOMA
Rule 65    variable -> LET ID IGUAL exp PUNTOCOMA
Rule 66    variable -> LET ID IGUAL ID LLAVEIZQUIERDO listadoBuild LLAVEDERECHO PUNTOCOMA
Rule 67    variable -> LET ID DOSPUNTOS ID IGUAL ID LLAVEIZQUIERDO listadoBuild LLAVEDERECHO PUNTOCOMA
Rule 68    asignacion -> ID IGUAL exp PUNTOCOMA
Rule 69    instruccionif -> IF exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO instruccionElse
Rule 70    instruccionElse -> ELSE LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 71    instruccionElse -> ELSE instruccionif
Rule 72    instruccionElse -> <empty>
Rule 73    instruccionWhile -> WHILE exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 74    instruccionLoop -> LOOP LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 75    instruccionFor -> FOR exp IN exp PUNTO PUNTO exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 76    instruccionFor2 -> FOR exp IN exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 77    listadoArreglo -> listadoArreglo COMA exp
Rule 78    listadoArreglo -> exp
Rule 79    alterValueArray -> ID list IGUAL exp PUNTOCOMA
Rule 80    list -> list CORCHETEDERECHO exp CORCHETEIZQUIERDO
Rule 81    list -> CORCHETEDERECHO exp CORCHETEIZQUIERDO
Rule 82    tipo -> I64
Rule 83    tipo -> F64
Rule 84    tipo -> BOOL
Rule 85    tipo -> STRING
Rule 86    tipo -> CHAR
Rule 87    tipo -> ID
Rule 88    tipo -> CORCHETEDERECHO tipo PUNTOCOMA exp CORCHETEIZQUIERDO
Rule 89    exp -> exp MAS exp
Rule 90    exp -> exp MENOS exp
Rule 91    exp -> exp MULTIPLICAR exp
Rule 92    exp -> exp DIV exp
Rule 93    exp -> exp MAYOR exp
Rule 94    exp -> exp MENOR exp
Rule 95    exp -> exp MAYORIGUAL exp
Rule 96    exp -> exp MENORIGUAL exp
Rule 97    exp -> exp IGUALDAD exp
Rule 98    exp -> exp DIFERENTE exp
Rule 99    exp -> exp OR exp
Rule 100   exp -> exp AND exp
Rule 101   exp -> exp AS I64
Rule 102   exp -> exp AS F64
Rule 103   exp -> exp PUNTO TO_STRING PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 104   exp -> exp PUNTO ABS PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 105   exp -> exp PUNTO SQRT PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 106   exp -> exp PUNTO CLONE PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 107   exp -> NOT exp
Rule 108   exp -> MENOS exp
Rule 109   exp -> PARENTESISIZQUIERDO exp PARENTESISDERECHO
Rule 110   exp -> I64 DOSPUNTOS DOSPUNTOS POW PARENTESISIZQUIERDO exp COMA exp PARENTESISDERECHO
Rule 111   exp -> F64 DOSPUNTOS DOSPUNTOS POW PARENTESISIZQUIERDO exp COMA exp PARENTESISDERECHO
Rule 112   exp -> primitivo
Rule 113   exp -> ID PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 114   exp -> ID PARENTESISIZQUIERDO parametrosllamado PARENTESISDERECHO
Rule 115   exp -> CORCHETEDERECHO listadoArreglo CORCHETEIZQUIERDO
Rule 116   exp -> exp CORCHETEDERECHO exp CORCHETEIZQUIERDO
Rule 117   exp -> exp PUNTO LEN PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 118   primitivo -> ENTERO
Rule 119   primitivo -> DECIMAL
Rule 120   primitivo -> TRUE
Rule 121   primitivo -> FALSE
Rule 122   primitivo -> CADENA
Rule 123   primitivo -> CARACTER
Rule 124   primitivo -> ID

Terminals, with rules where they appear

ABS                  : 104
AMPERSAND            : 
AND                  : 100
AS                   : 101 102
BARRA                : 
BOOL                 : 84
BREAK                : 28
CADENA               : 122
CAPACITY             : 
CARACTER             : 123
CHAR                 : 86
CLONE                : 106
COMA                 : 35 40 44 47 54 55 57 77 110 111
COMENTARIO           : 
CONTAINS             : 
CONTINUE             : 29
CORCHETEDERECHO      : 80 81 88 115 116
CORCHETEIZQUIERDO    : 80 81 88 115 116
DECIMAL              : 119
DIFERENTE            : 98
DIV                  : 92
DOSPUNTOS            : 37 46 49 61 64 67 110 110 111 111
ELSE                 : 70 71
ENTERO               : 118
F64                  : 83 102 111
FALSE                : 121
FN                   : 8 31 32 33 34
FOR                  : 75 76
I64                  : 82 101 110
ID                   : 31 32 33 34 37 38 39 43 46 49 51 52 52 57 60 61 62 63 63 64 65 66 66 67 67 67 68 79 87 113 114 124
IF                   : 69
IGUAL                : 52 61 62 63 64 65 66 67 68 79
IGUALDAD             : 97
IN                   : 75 76
INSERT               : 
LEN                  : 117
LET                  : 61 62 63 64 65 66 67
LLAVEDERECHO         : 8 31 32 33 34 43 51 63 66 67 69 70 73 74 75 76
LLAVEIZQUIERDO       : 8 31 32 33 34 43 51 63 66 67 69 70 73 74 75 76
LOOP                 : 74
MAIN                 : 8
MAS                  : 89
MAYOR                : 93
MAYORIGUAL           : 95
MENOR                : 94
MENORIGUAL           : 96
MENOS                : 90 108
MULTIPLICAR          : 91
MUT                  : 61 62 63
NEW                  : 
NOT                  : 53 54 57 107
OR                   : 99
PARENTESISDERECHO    : 8 31 32 33 34 38 39 53 54 57 103 104 105 106 109 110 111 113 114 117
PARENTESISIZQUIERDO  : 8 31 32 33 34 38 39 53 54 57 103 104 105 106 109 110 111 113 114 117
PORCENTAJE           : 
POW                  : 110 111
PRINTLN              : 53 54 57
PUNTO                : 52 57 58 75 75 103 104 105 106 117
PUNTOCOMA            : 28 29 30 38 39 52 53 54 57 61 62 63 64 65 66 67 68 79 88
PUSH                 : 
REMOVE               : 
RETURN               : 30
SQRT                 : 105
STRING               : 85
STRUCT               : 43
TIPORETURN           : 32 34
TO_STRING            : 103
TRUE                 : 120
USIZE                : 
WHAT                 : 
WHILE                : 73
WITH_CAPACITY        : 
error                : 

Nonterminals, with rules where they appear

alterValueArray      : 26
alterValueStruct     : 25
arranque             : 0
asignacion           : 13
elementoAcces        : 58 59
elementoBuild        : 47 48
elementoStruct       : 44 45
elementoStructBuild  : 49
exp                  : 30 42 50 52 53 54 55 56 57 61 62 64 65 68 69 73 75 75 75 76 76 77 78 79 80 81 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 102 103 104 105 106 107 108 109 110 110 111 111 116 116 117
fnMain               : 4
funciones            : 5 20
funcionesParametros  : 6 22
imprimir             : 11
inicio               : 2 3
instruccion          : 9 10
instruccionBreak     : 16
instruccionContinue  : 17
instruccionElse      : 69
instruccionFor       : 19
instruccionFor2      : 27
instruccionGeneral   : 1 2
instruccionLlamado   : 40 41
instruccionLoop      : 18
instruccionParametro : 35 36
instruccionReturn    : 23
instruccionStruct    : 7 24
instruccionWhile     : 15
instrucciones        : 8 9 31 32 33 34 69 70 73 74 75 76
instruccionif        : 14 71
list                 : 79 80
listaAcces           : 57 58
listadoArreglo       : 77 115
listadoBuild         : 47 51 63 66 67
listadoStruct        : 43 44
listadoprint         : 54 55
llamadofuncion       : 21
parametros           : 33 34 35
parametrosllamado    : 39 40 114
primitivo            : 112
tipo                 : 32 34 37 46 61 64 88
variable             : 12

Parsing method: LALR

state 0

    (0) S' -> . arranque
    (1) arranque -> . instruccionGeneral
    (2) instruccionGeneral -> . instruccionGeneral inicio
    (3) instruccionGeneral -> . inicio
    (4) inicio -> . fnMain
    (5) inicio -> . funciones
    (6) inicio -> . funcionesParametros
    (7) inicio -> . instruccionStruct
    (8) fnMain -> . FN MAIN PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (31) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (33) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (43) instruccionStruct -> . STRUCT ID LLAVEIZQUIERDO listadoStruct LLAVEDERECHO

    FN              shift and go to state 8
    STRUCT          shift and go to state 9

    arranque                       shift and go to state 1
    instruccionGeneral             shift and go to state 2
    inicio                         shift and go to state 3
    fnMain                         shift and go to state 4
    funciones                      shift and go to state 5
    funcionesParametros            shift and go to state 6
    instruccionStruct              shift and go to state 7

state 1

    (0) S' -> arranque .



state 2

    (1) arranque -> instruccionGeneral .
    (2) instruccionGeneral -> instruccionGeneral . inicio
    (4) inicio -> . fnMain
    (5) inicio -> . funciones
    (6) inicio -> . funcionesParametros
    (7) inicio -> . instruccionStruct
    (8) fnMain -> . FN MAIN PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (31) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (33) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (43) instruccionStruct -> . STRUCT ID LLAVEIZQUIERDO listadoStruct LLAVEDERECHO

    $end            reduce using rule 1 (arranque -> instruccionGeneral .)
    FN              shift and go to state 8
    STRUCT          shift and go to state 9

    inicio                         shift and go to state 10
    fnMain                         shift and go to state 4
    funciones                      shift and go to state 5
    funcionesParametros            shift and go to state 6
    instruccionStruct              shift and go to state 7

state 3

    (3) instruccionGeneral -> inicio .

    FN              reduce using rule 3 (instruccionGeneral -> inicio .)
    STRUCT          reduce using rule 3 (instruccionGeneral -> inicio .)
    $end            reduce using rule 3 (instruccionGeneral -> inicio .)


state 4

    (4) inicio -> fnMain .

    FN              reduce using rule 4 (inicio -> fnMain .)
    STRUCT          reduce using rule 4 (inicio -> fnMain .)
    $end            reduce using rule 4 (inicio -> fnMain .)


state 5

    (5) inicio -> funciones .

    FN              reduce using rule 5 (inicio -> funciones .)
    STRUCT          reduce using rule 5 (inicio -> funciones .)
    $end            reduce using rule 5 (inicio -> funciones .)


state 6

    (6) inicio -> funcionesParametros .

    FN              reduce using rule 6 (inicio -> funcionesParametros .)
    STRUCT          reduce using rule 6 (inicio -> funcionesParametros .)
    $end            reduce using rule 6 (inicio -> funcionesParametros .)


state 7

    (7) inicio -> instruccionStruct .

    FN              reduce using rule 7 (inicio -> instruccionStruct .)
    STRUCT          reduce using rule 7 (inicio -> instruccionStruct .)
    $end            reduce using rule 7 (inicio -> instruccionStruct .)


state 8

    (8) fnMain -> FN . MAIN PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (31) funciones -> FN . ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> FN . ID PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (33) funcionesParametros -> FN . ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> FN . ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    MAIN            shift and go to state 11
    ID              shift and go to state 12


state 9

    (43) instruccionStruct -> STRUCT . ID LLAVEIZQUIERDO listadoStruct LLAVEDERECHO

    ID              shift and go to state 13


state 10

    (2) instruccionGeneral -> instruccionGeneral inicio .

    FN              reduce using rule 2 (instruccionGeneral -> instruccionGeneral inicio .)
    STRUCT          reduce using rule 2 (instruccionGeneral -> instruccionGeneral inicio .)
    $end            reduce using rule 2 (instruccionGeneral -> instruccionGeneral inicio .)


state 11

    (8) fnMain -> FN MAIN . PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    PARENTESISIZQUIERDO shift and go to state 14


state 12

    (31) funciones -> FN ID . PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> FN ID . PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (33) funcionesParametros -> FN ID . PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> FN ID . PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    PARENTESISIZQUIERDO shift and go to state 15


state 13

    (43) instruccionStruct -> STRUCT ID . LLAVEIZQUIERDO listadoStruct LLAVEDERECHO

    LLAVEIZQUIERDO  shift and go to state 16


state 14

    (8) fnMain -> FN MAIN PARENTESISIZQUIERDO . PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    PARENTESISDERECHO shift and go to state 17


state 15

    (31) funciones -> FN ID PARENTESISIZQUIERDO . PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> FN ID PARENTESISIZQUIERDO . PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (33) funcionesParametros -> FN ID PARENTESISIZQUIERDO . parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> FN ID PARENTESISIZQUIERDO . parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (35) parametros -> . parametros COMA instruccionParametro
    (36) parametros -> . instruccionParametro
    (37) instruccionParametro -> . ID DOSPUNTOS tipo

    PARENTESISDERECHO shift and go to state 19
    ID              shift and go to state 18

    parametros                     shift and go to state 20
    instruccionParametro           shift and go to state 21

state 16

    (43) instruccionStruct -> STRUCT ID LLAVEIZQUIERDO . listadoStruct LLAVEDERECHO
    (44) listadoStruct -> . listadoStruct COMA elementoStruct
    (45) listadoStruct -> . elementoStruct
    (46) elementoStruct -> . ID DOSPUNTOS tipo

    ID              shift and go to state 22

    listadoStruct                  shift and go to state 23
    elementoStruct                 shift and go to state 24

state 17

    (8) fnMain -> FN MAIN PARENTESISIZQUIERDO PARENTESISDERECHO . LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    LLAVEIZQUIERDO  shift and go to state 25


state 18

    (37) instruccionParametro -> ID . DOSPUNTOS tipo

    DOSPUNTOS       shift and go to state 26


state 19

    (31) funciones -> FN ID PARENTESISIZQUIERDO PARENTESISDERECHO . LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> FN ID PARENTESISIZQUIERDO PARENTESISDERECHO . TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    LLAVEIZQUIERDO  shift and go to state 27
    TIPORETURN      shift and go to state 28


state 20

    (33) funcionesParametros -> FN ID PARENTESISIZQUIERDO parametros . PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> FN ID PARENTESISIZQUIERDO parametros . PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (35) parametros -> parametros . COMA instruccionParametro

    PARENTESISDERECHO shift and go to state 29
    COMA            shift and go to state 30


state 21

    (36) parametros -> instruccionParametro .

    PARENTESISDERECHO reduce using rule 36 (parametros -> instruccionParametro .)
    COMA            reduce using rule 36 (parametros -> instruccionParametro .)


state 22

    (46) elementoStruct -> ID . DOSPUNTOS tipo

    DOSPUNTOS       shift and go to state 31


state 23

    (43) instruccionStruct -> STRUCT ID LLAVEIZQUIERDO listadoStruct . LLAVEDERECHO
    (44) listadoStruct -> listadoStruct . COMA elementoStruct

    LLAVEDERECHO    shift and go to state 32
    COMA            shift and go to state 33


state 24

    (45) listadoStruct -> elementoStruct .

    LLAVEDERECHO    reduce using rule 45 (listadoStruct -> elementoStruct .)
    COMA            reduce using rule 45 (listadoStruct -> elementoStruct .)


state 25

    (8) fnMain -> FN MAIN PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO . instrucciones LLAVEDERECHO
    (9) instrucciones -> . instrucciones instruccion
    (10) instrucciones -> . instruccion
    (11) instruccion -> . imprimir
    (12) instruccion -> . variable
    (13) instruccion -> . asignacion
    (14) instruccion -> . instruccionif
    (15) instruccion -> . instruccionWhile
    (16) instruccion -> . instruccionBreak
    (17) instruccion -> . instruccionContinue
    (18) instruccion -> . instruccionLoop
    (19) instruccion -> . instruccionFor
    (20) instruccion -> . funciones
    (21) instruccion -> . llamadofuncion
    (22) instruccion -> . funcionesParametros
    (23) instruccion -> . instruccionReturn
    (24) instruccion -> . instruccionStruct
    (25) instruccion -> . alterValueStruct
    (26) instruccion -> . alterValueArray
    (27) instruccion -> . instruccionFor2
    (53) imprimir -> . PRINTLN NOT PARENTESISIZQUIERDO exp PARENTESISDERECHO PUNTOCOMA
    (54) imprimir -> . PRINTLN NOT PARENTESISIZQUIERDO exp COMA listadoprint PARENTESISDERECHO PUNTOCOMA
    (57) imprimir -> . PRINTLN NOT PARENTESISIZQUIERDO exp COMA ID PUNTO listaAcces PARENTESISDERECHO PUNTOCOMA
    (61) variable -> . LET MUT ID DOSPUNTOS tipo IGUAL exp PUNTOCOMA
    (62) variable -> . LET MUT ID IGUAL exp PUNTOCOMA
    (63) variable -> . LET MUT ID IGUAL ID LLAVEIZQUIERDO listadoBuild LLAVEDERECHO PUNTOCOMA
    (64) variable -> . LET ID DOSPUNTOS tipo IGUAL exp PUNTOCOMA
    (65) variable -> . LET ID IGUAL exp PUNTOCOMA
    (66) variable -> . LET ID IGUAL ID LLAVEIZQUIERDO listadoBuild LLAVEDERECHO PUNTOCOMA
    (67) variable -> . LET ID DOSPUNTOS ID IGUAL ID LLAVEIZQUIERDO listadoBuild LLAVEDERECHO PUNTOCOMA
    (68) asignacion -> . ID IGUAL exp PUNTOCOMA
    (69) instruccionif -> . IF exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO instruccionElse
    (73) instruccionWhile -> . WHILE exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (28) instruccionBreak -> . BREAK PUNTOCOMA
    (29) instruccionContinue -> . CONTINUE PUNTOCOMA
    (74) instruccionLoop -> . LOOP LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (75) instruccionFor -> . FOR exp IN exp PUNTO PUNTO exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (31) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (38) llamadofuncion -> . ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOCOMA
    (39) llamadofuncion -> . ID PARENTESISIZQUIERDO parametrosllamado PARENTESISDERECHO PUNTOCOMA
    (33) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (30) instruccionReturn -> . RETURN exp PUNTOCOMA
    (43) instruccionStruct -> . STRUCT ID LLAVEIZQUIERDO listadoStruct LLAVEDERECHO
    (52) alterValueStruct -> . ID PUNTO ID IGUAL exp PUNTOCOMA
    (79) alterValueArray -> . ID list IGUAL exp PUNTOCOMA
    (76) instruccionFor2 -> . FOR exp IN exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    PRINTLN         shift and go to state 54
    LET             shift and go to state 56
    ID              shift and go to state 55
    IF              shift and go to state 57
    WHILE           shift and go to state 58
    BREAK           shift and go to state 59
    CONTINUE        shift and go to state 60
    LOOP            shift and go to state 61
    FOR             shift and go to state 62
    FN              shift and go to state 34
    RETURN          shift and go to state 63
    STRUCT          shift and go to state 9

    instrucciones                  shift and go to state 35
    instruccion                    shift and go to state 36
    imprimir                       shift and go to state 37
    variable                       shift and go to state 38
    asignacion                     shift and go to state 39
    instruccionif                  shift and go to state 40
    instruccionWhile               shift and go to state 41
    instruccionBreak               shift and go to state 42
    instruccionContinue            shift and go to state 43
    instruccionLoop                shift and go to state 44
    instruccionFor                 shift and go to state 45
    funciones                      shift and go to state 46
    llamadofuncion                 shift and go to state 47
    funcionesParametros            shift and go to state 48
    instruccionReturn              shift and go to state 49
    instruccionStruct              shift and go to state 50
    alterValueStruct               shift and go to state 51
    alterValueArray                shift and go to state 52
    instruccionFor2                shift and go to state 53

state 26

    (37) instruccionParametro -> ID DOSPUNTOS . tipo
    (82) tipo -> . I64
    (83) tipo -> . F64
    (84) tipo -> . BOOL
    (85) tipo -> . STRING
    (86) tipo -> . CHAR
    (87) tipo -> . ID
    (88) tipo -> . CORCHETEDERECHO tipo PUNTOCOMA exp CORCHETEIZQUIERDO

    I64             shift and go to state 66
    F64             shift and go to state 67
    BOOL            shift and go to state 68
    STRING          shift and go to state 69
    CHAR            shift and go to state 70
    ID              shift and go to state 64
    CORCHETEDERECHO shift and go to state 71

    tipo                           shift and go to state 65

state 27
